test/Fail/ClashingDefinition.err
ClashingDefinition.agda:6.3-10: error: [ClashingDefinition]
Multiple definitions of X. Previous definition at
ClashingDefinition.agda:5.3-4
when scope checking the declaration
  X : Set
